compiled footer tokens

--- a/toolkits/global/packages/global-forms/scss/00-tokens/_default.tokens.scss
+++ b/toolkits/global/packages/global-forms/scss/00-tokens/_default.tokens.scss
@@ -1,43 +1,43 @@
-// Generated on 16/05/2022, 16:40:55
+// Generated on 18/05/2022, 10:05:25
 // Source: design-tokens/componenets/global/global-forms/default.json
 // DO NOT edit directly
 
-$global-forms-checkbox-checked-background-color: $tokens--$background-container-inverted;
-$global-forms-checkbox-checked-icon-fill: $tokens--$icon-checkbox-checked-fill;
-$global-forms-checkbox-checked-icon-path: $tokens--"path/to/icon.svg";
-$global-forms-checkbox-checked-icon-stroke: $tokens--$icon-checkbox-checked-stroke;
-$global-forms-checkbox-size: $tokens--$sizing-relative-600;
-$global-forms-field-stack-spacing: $tokens--$spacing-relative-100;
-$global-forms-heading-font-family: $tokens--$typography-heading-level-1-default-font-size;
-$global-forms-heading-font-size: $tokens--$font-size-900;
-$global-forms-heading-font-weight: $tokens--$font-weight-light;
-$global-forms-indent-border-color: $tokens--$border-color-indent;
-$global-forms-indent-border-radius: $tokens--$border-radius-100;
-$global-forms-indent-border-width: $tokens--$border-width-200;
-$global-forms-input-background-color: $tokens--$background-container;
-$global-forms-input-border-color-error: $tokens--$state-error;
-$global-forms-input-border-color-resting: $tokens--$border-color-primary;
-$global-forms-input-border-width: $tokens--$border-width-25;
-$global-forms-input-focus-outline-color: $tokens--$ui-focus-outline-color;
-$global-forms-input-font-color: $tokens--$text-primary;
-$global-forms-input-font-size: $tokens--$ui-font-size;
-$global-forms-input-font-weight: $tokens--$font-weight-regular;
-$global-forms-input-padding: $tokens--$spacing-relative-200 $spacing-relative-400;
-$global-forms-input-stack-spacing: $tokens--$spacing-relative-100;
-$global-forms-input-width-maximum: $tokens--$ui-content-width;
-$global-forms-label-color: $tokens--$text-primary;
-$global-forms-label-font-size: $tokens--$ui-font-size;
-$global-forms-label-font-weight: $tokens--$font-weight-bold;
-$global-forms-legend-font-family: $tokens--$font-family-serif;
-$global-forms-legend-font-size: $tokens--$font-size-800;
-$global-forms-legend-font-weight: $tokens--$font-weight-regular;
-$global-forms-message-color-error: $tokens--$state-error;
-$global-forms-message-color-resting: $tokens--$text-primary;
-$global-forms-message-font-size: $tokens--$ui-font-size;
-$global-forms-message-font-weight: $tokens--$font-weight-regular;
-$global-forms-message-icon-color-error: $tokens--$state-error;
-$global-forms-message-icon-color-resting: $tokens--$text-primary;
-$global-forms-radio-carat-color: $tokens--$text-primary;
-$global-forms-radio-carat-size: $tokens--$sizing-relative-200;
-$global-forms-radio-carat-spacing: $tokens--$spacing-relative-200;
-$global-forms-select-icon-stroke: $tokens--$icon-select-stroke;
+$global-forms-checkbox-checked-background-color: $tokens--background-container-inverted;
+$global-forms-checkbox-checked-icon-fill: $tokens--icon-checkbox-checked-fill;
+$global-forms-checkbox-checked-icon-path: "path/to/icon.svg";
+$global-forms-checkbox-checked-icon-stroke: $tokens--icon-checkbox-checked-stroke;
+$global-forms-checkbox-size: $tokens--sizing-relative-600;
+$global-forms-field-stack-spacing: $tokens--spacing-relative-100;
+$global-forms-heading-font-family: $tokens--typography-heading-level-1-default-font-size;
+$global-forms-heading-font-size: $tokens--font-size-900;
+$global-forms-heading-font-weight: $tokens--font-weight-light;
+$global-forms-indent-border-color: $tokens--border-color-indent;
+$global-forms-indent-border-radius: $tokens--border-radius-100;
+$global-forms-indent-border-width: $tokens--border-width-200;
+$global-forms-input-background-color: $tokens--background-container;
+$global-forms-input-border-color-error: $tokens--state-error;
+$global-forms-input-border-color-resting: $tokens--border-color-primary;
+$global-forms-input-border-width: $tokens--border-width-25;
+$global-forms-input-focus-outline-color: $tokens--ui-focus-outline-color;
+$global-forms-input-font-color: $tokens--text-primary;
+$global-forms-input-font-size: $tokens--ui-font-size;
+$global-forms-input-font-weight: $tokens--font-weight-regular;
+$global-forms-input-padding: $tokens--spacing-relative-200 $spacing-relative-400;
+$global-forms-input-stack-spacing: $tokens--spacing-relative-100;
+$global-forms-input-width-maximum: $tokens--ui-content-width;
+$global-forms-label-color: $tokens--text-primary;
+$global-forms-label-font-size: $tokens--ui-font-size;
+$global-forms-label-font-weight: $tokens--font-weight-bold;
+$global-forms-legend-font-family: $tokens--font-family-serif;
+$global-forms-legend-font-size: $tokens--font-size-800;
+$global-forms-legend-font-weight: $tokens--font-weight-regular;
+$global-forms-message-color-error: $tokens--state-error;
+$global-forms-message-color-resting: $tokens--text-primary;
+$global-forms-message-font-size: $tokens--ui-font-size;
+$global-forms-message-font-weight: $tokens--font-weight-regular;
+$global-forms-message-icon-color-error: $tokens--state-error;
+$global-forms-message-icon-color-resting: $tokens--text-primary;
+$global-forms-radio-carat-color: $tokens--text-primary;
+$global-forms-radio-carat-size: $tokens--sizing-relative-200;
+$global-forms-radio-carat-spacing: $tokens--spacing-relative-200;
+$global-forms-select-icon-stroke: $tokens--icon-select-stroke;
