--- a/context/brand-context/default/scss/00-tokens/_background.variables.scss
+++ b/context/brand-context/default/scss/00-tokens/_background.variables.scss
@@ -1,10 +1,10 @@
 
 // Do not edit directly
-// Generated on Wed, 18 May 2022 09:05:25 GMT
+// Generated on Wed, 18 May 2022 14:02:47 GMT
 
 $tokens--background-page: #f8f8f8;
 $tokens--background-container: #ffffff;
-$tokens--background-container-inverted: #000000;
+$tokens--background-container-inverted: #01324b;
 $tokens--background-facet: #f3f3f3;
 $tokens--background-footer: #01324b;
 $tokens--background-table-heading: #666666;
