compiled tokens as sass variables

--- a/toolkits/global/packages/global-forms/scss/00-tokens/_default.tokens.scss
+++ b/toolkits/global/packages/global-forms/scss/00-tokens/_default.tokens.scss
@@ -1,4 +1,4 @@
-// Generated on 18/05/2022, 10:05:25
+// Generated on 18/05/2022, 15:02:47
 // Source: design-tokens/componenets/global/global-forms/default.json
 // DO NOT edit directly
 
@@ -22,7 +22,8 @@ $global-forms-input-focus-outline-color: $tokens--ui-focus-outline-color;
 $global-forms-input-font-color: $tokens--text-primary;
 $global-forms-input-font-size: $tokens--ui-font-size;
 $global-forms-input-font-weight: $tokens--font-weight-regular;
-$global-forms-input-padding: $tokens--spacing-relative-200 $spacing-relative-400;
+$global-forms-input-padding-block: $tokens--spacing-relative-200;
+$global-forms-input-padding-inline: $tokens--spacing-relative-400;
 $global-forms-input-stack-spacing: $tokens--spacing-relative-100;
 $global-forms-input-width-maximum: $tokens--ui-content-width;
 $global-forms-label-color: $tokens--text-primary;
