--- a/toolkits/global/packages/global-forms/demo/main.scss
+++ b/toolkits/global/packages/global-forms/demo/main.scss
@@ -6,5 +6,5 @@
 @import '../node_modules/@springernature/brand-context/default/scss/enhanced.scss';
 
 // component SCSS
-@import '../scss/10-settings/default';
+@import '../scss/00-tokens';
 @import '../scss/50-components/forms';
