--- a/toolkits/global/packages/global-forms/scss/00-tokens/_springer.tokens.scss
+++ b/toolkits/global/packages/global-forms/scss/00-tokens/_springer.tokens.scss
@@ -1,5 +1,5 @@
-// Generated on 19/05/2022, 09:34:22
+// Generated on 19/05/2022, 11:49:44
 // Source: design-tokens/componenets/springer/global-forms/springer.json
 // DO NOT edit directly
 
-$global-forms-field-stack-spacing: $tokens--$spacing-relative-100;
+$global-forms-field-stack-spacing: $tokens--spacing-relative-100;
