--- a/toolkits/global/packages/global-forms/demo/main.scss
+++ b/toolkits/global/packages/global-forms/demo/main.scss
@@ -1,10 +1,8 @@
 @charset "UTF-8";
 
-// we must not add `node_modules/` to the Sass includePaths config,
-//   so use relative paths here. Paths should be relative to this file.
-@import '../node_modules/@springernature/brand-context/default/scss/core.scss';
-@import '../node_modules/@springernature/brand-context/default/scss/enhanced.scss';
+@import '../../../../../context/brand-context/default/scss/core.scss';
+@import '../../../../../context/brand-context/default/scss/enhanced.scss';
 
 // component SCSS
-@import '../scss/00-tokens';
+@import '../scss/00-tokens/default.tokens.scss';
 @import '../scss/50-components/forms';
