adds new compiled brand context sass variables from tokens

--- a/context/brand-context/default/scss/00-tokens/_index.scss
+++ b/context/brand-context/default/scss/00-tokens/_index.scss
@@ -2,6 +2,8 @@
 @import '_border.variables.scss';
 @import '_breakpoints.variables.scss';
 @import '_button.variables.scss';
+@import '_color.variables.scss';
+@import '_font-weight.variables.scss';
 @import '_icon.variables.scss';
 @import '_link.variables.scss';
 @import '_sizing.variables.scss';
