--- a/context/brand-context/default/scss/00-tokens/_state.variables.scss
+++ b/context/brand-context/default/scss/00-tokens/_state.variables.scss
@@ -1,9 +1,9 @@
 
 // Do not edit directly
-// Generated on Thu, 19 May 2022 10:49:43 GMT
+// Generated on Thu, 19 May 2022 11:50:51 GMT
 
 $tokens--state-focus: #ffcc00;
 $tokens--state-error: #c40606;
 $tokens--state-warning: #f58220;
 $tokens--state-success: #00a69d;
-$tokens--state-information: #003f8d;
+$tokens--state-information: #000000;
