--- a/toolkits/global/packages/global-forms/scss/50-components/_forms.scss
+++ b/toolkits/global/packages/global-forms/scss/50-components/_forms.scss
@@ -35,7 +35,7 @@
 	max-width: $global-forms-input-width-maximum;
 }
 
-.c-forms__field + .c-forms__field {
+.c-forms__field+.c-forms__field {
 	margin-top: $global-forms-field-stack-spacing;
 }
 
@@ -48,8 +48,8 @@
 	background-color: $global-forms-input-background-color;
 }
 
-* + .c-forms__input,
-* + .c-forms__input-container {
+*+.c-forms__input,
+*+.c-forms__input-container {
 	margin-top: $global-forms-input-stack-spacing;
 }
 
@@ -77,11 +77,14 @@
 }
 
 .c-forms__error {
-	color: $global-form--color-error;
+	// this one doesn't work
+	// color: $global-form--color-error;
+	// this one does - is the name correct?
+	color: $global-forms-message-color-error
 }
 
-label + .c-forms__error,
-.c-forms__error + label {
+label+.c-forms__error,
+.c-forms__error+label {
 	margin-top: #{$global-forms-input-stack-spacing / 2};
 }
 
@@ -126,9 +129,8 @@ label + .c-forms__error,
 	font-weight: normal;
 }
 
-.c-forms__field.c-forms__label +
-.c-forms__field.c-forms__label,
-legend + .c-forms__field.c-forms__label {
+.c-forms__field.c-forms__label+.c-forms__field.c-forms__label,
+legend+.c-forms__field.c-forms__label {
 	margin-top: #{$global-forms-field-stack-spacing / 2};
 }
 
@@ -146,11 +148,14 @@ legend + .c-forms__field.c-forms__label {
 	margin-right: $global-forms-input-stack-spacing;
 }
 
-:checked + .c-forms__label--inline::before {
-	border-color: $global-form--color-checked;
+:checked+.c-forms__label--inline::before {
+	// this one doesn't work
+	// border-color: $global-form--color-checked;
+	// is this what you're after?
+	border-color: $global-forms-input-border-color-resting;
 }
 
-:focus + .c-forms__label--inline::before {
+:focus+.c-forms__label--inline::before {
 	box-shadow: 0 0 0 3px $global-forms-input-focus-outline-color;
 }
 
@@ -162,35 +167,41 @@ legend + .c-forms__field.c-forms__label {
 	border-radius: 0.125em;
 }
 
-:checked + .c-forms__label--radio::before {
+:checked+.c-forms__label--radio::before {
 	background: radial-gradient(#{$global-forms-checkbox-checked-background-color} 0%, #{$global-forms-checkbox-checked-background-color} 40%, #fff 40%);
 }
 
-:checked + .c-forms__label--checkbox::before {
+:checked+.c-forms__label--checkbox::before {
 	background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" stroke-width="3" stroke="white" stroke-linejoin="round" stroke-linecap="round" viewBox="0 0 20 20"><path d="M4.5,11 10,15 16,5"></path></svg>');
 	background-size: 100%;
 	background-repeat: none;
 	background-position: center;
 }
 
-:checked + .c-forms__label--checkbox::before {
+:checked+.c-forms__label--checkbox::before {
 	background-color: $global-forms-message-color-error;
 }
 
-[invalid] + .c-forms__label--checkbox::before {
+[invalid]+.c-forms__label--checkbox::before {
 	border-color: $global-forms-message-color-error;
 }
 
 .c-forms__radio-fields {
 	margin-top: $global-forms-input-stack-spacing;
-	margin-left: calc((#{$global-forms-input-font-size} / 4) + #{$global-form--border-width-thick});
+	// this doesn't work
+	// margin-left: calc((#{$global-forms-input-font-size} / 4) + #{$global-form--border-width-thick});
+	// is it this one?
+	margin-left: calc((#{$global-forms-input-font-size} / 4) + #{$global-forms-indent-border-width});
+	// this doesn't work
 	border-left: calc(#{$global-forms-input-font-size} / 2) solid $global-form--indent-border-color;
+	// is it this one?
+	border-left: calc(#{$global-forms-input-font-size} / 2) solid $global-forms-indent-border-width;
 	padding-top: $global-forms-field-stack-spacing;
 	padding-left: $global-forms-field-stack-spacing;
 	display: none;
 }
 
-:checked ~ .c-forms__radio-fields {
+:checked~.c-forms__radio-fields {
 	display: block;
 }
 
@@ -225,9 +236,6 @@ legend + .c-forms__field.c-forms__label {
 	font-weight: bold;
 }
 
-.c-forms__error-summary-errors li + li {
+.c-forms__error-summary-errors li+li {
 	margin-top: $global-forms-input-stack-spacing;
 }
-
-
-
