[AK,MC] Adjust typography

--- a/toolkits/global/packages/global-underline-nav/scss/10-settings/default.scss
+++ b/toolkits/global/packages/global-underline-nav/scss/10-settings/default.scss
@@ -17,6 +17,7 @@ $underline-nav--link-font-family: $context--font-family-sans;
 
 $underline-nav--current-link-color: greyscale(40);
 $underline-nav--current-border-color: currentColor;
+$underline-nav--current-link-font-weight: $context--font-weight-bold;
 
 $underline-nav--hover-link-color: mediumblue;
 $underline-nav--hover-border-color: currentColor;
