--- a/toolkits/global/packages/global-underline-nav/scss/10-settings/springernature.scss
+++ b/toolkits/global/packages/global-underline-nav/scss/10-settings/springernature.scss
@@ -10,6 +10,7 @@
 
 $underline-nav--border-bottom: 1px solid color('grey-mid1');
 
+$underline-nav--link-font-size: 1.125rem;
 $underline-nav--link-color: color('medium-blue');
 $underline-nav--current-link-color: color('grey-dark1');
 $underline-nav--hover-link-color: color('medium-blue');
