--- a/toolkits/global/packages/global-card/scss/50-components/card.scss
+++ b/toolkits/global/packages/global-card/scss/50-components/card.scss
@@ -22,7 +22,6 @@
 }
 
 .c-card__image {
-	flex: 0 1 auto;
 	position: relative;
 	display: flex;
 	// Center image horizontally
@@ -40,16 +39,14 @@
 	// Not direct child due to picture element usage
 	img {
 		position: absolute;
-		max-width: unset;
+		left: 0;
 		// Maintain aspect ratio but overflow container
 		// possibly in both dimensions
 		min-width: 100%;
 		min-height: 100%;
-		transform: translateY(-50%);
 		@supports (object-fit: cover) {
 			width: 100%;
 			height: 100%;
-			transform: unset;
 			// Maintain aspect ratio
 			// but only overflow in on dimension
 			object-fit: cover;
