--- a/toolkits/nature/packages/nature-footer/scss/50-components/footer.scss
+++ b/toolkits/nature/packages/nature-footer/scss/50-components/footer.scss
@@ -6,6 +6,10 @@
 	font-size: $footer--font-size;
 }
 
+.c-footer__container {
+	@include u-container;
+}
+
 .c-footer a {
 	@include u-link-inherit();
 	vertical-align: middle;
@@ -87,8 +91,38 @@
 	font-family: $footer--heading-font-family;
 }
 
+.c-footer__heading--visually-hidden {
+	@include u-visually-hidden;
+}
+
 .c-footer__item {
 	&:not(:last-child) {
 		margin-bottom: 4px;
 	}
+}
+
+.c-footer__menu {
+	@include u-list-reset;
+	display: flex;
+	font-size: 1rem;
+	font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
+	line-height: 1.3;
+}
+
+.c-footer__menu:not(:last-child) {
+	margin-right: spacing(32);
+}
+
+.c-footer__menu-item:not(:last-child) {
+	margin-right: spacing(16);
+}
+
+.c-footer__menu-link {
+	display: inline-block;
+	text-decoration: none;
+	color: inherit;
+}
+
+.c-footer__menu-icon {
+	@include u-icon();
 }
