Variablising things for tidyness points

--- a/toolkits/nature/packages/nature-footer/scss/10-settings/footer.scss
+++ b/toolkits/nature/packages/nature-footer/scss/10-settings/footer.scss
@@ -5,7 +5,9 @@ $footer--line-height: 1.4;
 $footer--header-border-bottom: 1px solid greyscale(20);
 $footer--heading-color: greyscale(90);
 $footer--heading-font-family: $context--font-family-sans;
-
+$footer--menu-line-height: 1.3;
+$footer--menu-font-size: 1rem;
+$footer--menu-font-family: $context--font-family-sans;
 $footer--spacing-small: 8px;
 $footer--spacing-medium: 16px;
 $footer--spacing-large: 24px;
