--- a/toolkits/nature/packages/nature-footer/scss/50-components/footer.scss
+++ b/toolkits/nature/packages/nature-footer/scss/50-components/footer.scss
@@ -104,9 +104,9 @@
 .c-footer__menu {
 	@include u-list-reset;
 	display: flex;
-	font-size: 1rem;
-	font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
-	line-height: 1.3;
+	font-size: $footer--menu-font-size;
+	font-family: $footer--menu-font-family;
+	line-height: $footer--menu-line-height;
 }
 
 .c-footer__menu:not(:last-child) {
