Removes u-hide-print classnames as mixin now exists in default brand context

--- a/toolkits/nature/packages/nature-footer/view/footer.hbs
+++ b/toolkits/nature/packages/nature-footer/view/footer.hbs
@@ -1,5 +1,5 @@
 <div class="c-footer">
-	<div class="c-footer__container" class="u-hide-print" data-track-component="footer">
+	<div class="c-footer__container" data-track-component="footer">
 		<h2 class="c-footer__heading c-footer__heading--visually-hidden">{{title}}</h2>
 		<div class="c-footer__header">
 			<div class="c-footer__logo">
